--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     </style>
 </head>
 <body>
-    <img src="em ankush desktop1.png" alt="Desktop Screenshot" class="desktop-view">
+    <img src="em anksuh desktop1.png" alt="Desktop Screenshot" class="desktop-view">
     <img src="em ankush mobile-alt1.png" alt="Resized Browser Mobile View" class="mobile-alt">
     <div class="mobile-container">
-        <img src="em ankush mobile1.png" alt="Mobile Screenshot" class="mobile-view">
+        <img src="em anksuh mobile1.png" alt="Mobile Screenshot" class="mobile-view">
     </div>
 </body>
 </html>
